--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet" />
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100">
-<div>
+<main>
     <div class="card p-3 bg-card-body rounded-3" style="width: 22rem">
         <div class="card-image position-relative"> <img src="images/image-equilibrium.jpg" class="card-img-top rounded-3" alt="Equilibrium #3429"/>
             <div class="img-overlay position-absolute rounded-3"><img class="position-absolute" src="images/icon-view.svg" alt="icon"/></div>
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="attribution mt-3 text-muted">Challenge by <a class="link-muted" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a class="link-muted" href="https://www.frontendmentor.io/profile/warehouse827">Warehouse 827</a>.</div>
-</div>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </body>
