Added visually hidden h1 tag

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100">
 <main>
+	<h1 class="visually-hidden">Frontend Mentor | NFT preview card component by Warehouse 827</h1>
     <div class="card p-3 bg-card-body rounded-3" style="width: 22rem">
         <div class="card-image position-relative"> <img src="images/image-equilibrium.jpg" class="card-img-top rounded-3" alt="Equilibrium #3429"/>
             <div class="img-overlay position-absolute rounded-3"><img class="position-absolute" src="images/icon-view.svg" alt="icon"/></div>
