--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="img-overlay position-absolute rounded-3"><img class="position-absolute" src="images/icon-view.svg" alt="icon"/></div>
         </div>
         <div class="card-body">
-            <h5 class="card-title text-light fw-semibold mb-3"><a class="link-light text-decoration-none" href="#" title="Equilibrium #3429">Equilibrium #3429</a></h5>
+            <p class="h5 card-title text-light fw-semibold mb-3"><a class="link-light text-decoration-none" href="#" title="Equilibrium #3429">Equilibrium #3429</a></p>
             <p class="card-text fw-light text-primary">Our Equilibrium collection promotes balance and calm.</p>
             <div class="border-bottom border-light border-opacity-10 row fs-7">
                 <p class="col-6 text-info"><span class="eth">0.041 ETH</span></p>
