--- a/index.html
+++ b/index.html
@@ -1,41 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Warehouse 827" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-<title>Frontend Mentor | NFT preview card component by Warehouse 827</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet" />
-</head>
-<body class="d-flex align-items-center justify-content-center vh-100">
-<main>
-	<h1 class="visually-hidden">Frontend Mentor | NFT preview card component by Warehouse 827</h1>
-    <div class="card p-3 bg-card-body rounded-3" style="width: 22rem">
-        <div class="card-image position-relative"> <img src="images/image-equilibrium.jpg" class="card-img-top rounded-3" alt="Equilibrium #3429"/>
-            <div class="img-overlay position-absolute rounded-3"><img class="position-absolute" src="images/icon-view.svg" alt="icon"/></div>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>NFT Preview Card Component by Warehouse 827</title>
+    <meta
+      name="description"
+      content="Semantic HTML Solution for Frontend Mentor's NFT Preview Card Component by Warehouse 827"
+    />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <article class="card">
+        <div class="card-image">
+          <img
+            src="images/image-equilibrium.jpg"
+            class="img-fluid"
+            alt="3-d cube"
+          />
+          <div class="img-overlay">
+            <img
+              class="position-absolute"
+              src="images/icon-view.svg"
+              alt="icon"
+            />
+          </div>
         </div>
         <div class="card-body">
-            <p class="h5 card-title text-light fw-semibold mb-3"><a class="link-light text-decoration-none" href="#" title="Equilibrium #3429">Equilibrium #3429</a></p>
-            <p class="card-text fw-light text-primary">Our Equilibrium collection promotes balance and calm.</p>
-            <div class="border-bottom border-light border-opacity-10 row fs-7">
-                <p class="col-6 text-info"><span class="eth">0.041 ETH</span></p>
-                <p class="col-6 text-primary text-end"><span class="days-left">3 days left</span></p>
-            </div>
-            <div class="mt-3 d-flex"><img class="me-3 border border-light rounded-circle" src="images/image-avatar.png" width="32" height="32" alt="Jules Wyvern"/>
-                <p class="text-primary fs-7 lh-lg">Creation of <a class="link-light text-decoration-none" href="#" title="Jules Wyvern">Jules Wyvern</a></p>
-            </div>
+          <h2 class="card-title"><a href="#">Equilibrium #3429</a></h2>
+          <p class="card-text">
+            Our Equilibrium collection promotes balance and calm.
+          </p>
         </div>
-    </div>
-    <div class="attribution mt-3 text-muted">Challenge by <a class="link-muted" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a class="link-muted" href="https://www.frontendmentor.io/profile/warehouse827">Warehouse 827</a>.</div>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script> 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-</body>
+        <footer class="card-footer">
+          <div class="card-footer--details">
+            <div class="flex-container">
+              <img src="images/icon-ethereum.svg" alt="ethereum icon" />
+              <p>0.041 ETH</p>
+            </div>
+            <div class="flex-container">
+              <img src="images/icon-clock.svg" alt="clock icon" />
+              <p class="clock">3 days left</p>
+            </div>
+          </div>
+          <div class="card-footer--credit">
+            <img
+              class="creator-avatar"
+              src="images/image-avatar.png"
+              alt="Creator avatar"
+            />
+            Creation of
+            <a class="creator" href="#" title="Created by Jules Wyvern">
+              Jules Wyvern</a
+            >
+          </div>
+        </footer>
+      </article>
+    </main>
+    <footer class="site-credit">
+      <p>
+        <small>
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor
+          </a>
+          Challenge <span class="copyright-spacer">•</span> Coded by
+          <a href="https://www.frontendmentor.io/profile/warehouse827"
+            >Warehouse 827</a
+          >
+        </small>
+      </p>
+    </footer>
+  </body>
 </html>
